hphp/test/zend/good/tests/classes/autoload_017.php.skipif
<?hh extension_loaded('reflection') or die('skip');