hphp/test/zend/bad/ext/mbstring/tests/bug63447_002.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
?>